# DroneTracking

./: .gitignore  README.md  pyproject.toml
.claude/skills/dronetracking-estimation/: SKILL.md
.claude/skills/dronetracking-eval/: SKILL.md
.claude/skills/dronetracking-overview/: SKILL.md
.claude/skills/dronetracking-runtime/: SKILL.md
docs/: handoff_prompt.md  hardware_bringup.md  iteration1_contract.md  iteration2_contract.md  iteration3_contract.md  iteration4_contract.md  iteration6_contract.md  webapp_contract.md  webapp_ranging_contract.md
scenarios/: detection_demo.yaml  field_5dev.yaml  gps_denied.yaml  moving_devices.yaml  multi_drone.yaml  network_demo.yaml  noisefree_ideal.yaml  sparse_anchors_circular.yaml
src/dronetracking/: __init__.py  config.py  datatypes.py  geo.py  pipeline.py  run.py  transforms.py
tests/: test_config.py  test_datatypes.py  test_detection.py  test_device_agent.py  test_device_backends.py  test_distributed.py  test_e2e.py  test_e2e_phases.py  test_est_clock_sync.py  test_est_geometry.py  test_est_georef.py  test_est_target.py  test_eval.py  test_geo.py  test_geometry_tracking.py  test_gps_denied.py  test_interfaces.py  test_joint_clock.py  test_live_engine.py  test_multi_target.py  test_network.py  test_no_truth_leak.py  test_online_tracker.py  test_recorded.py  test_separation.py  test_sim_kinematics.py  test_sim_signals.py  test_simulator.py  test_sources.py  test_studies.py  test_transforms.py  test_viz.py  test_viz_animated.py  test_webapp_ranging.py  test_webapp_server.py  test_webapp_session.py
(+69 files in other folders)
